syntax = "proto3";
package prismatics.server;

import "gogoproto/gogo.proto";
import "prismatics/pool_token.proto";

option go_package = "github.com/prism-finance/prismatics/server";

message QueryPoolTokenRequest {
  uint64 pool_id = 1;
  string denom = 2;
}

message QueryPoolTokenResponse {
  PoolToken pool_token = 1 [(gogoproto.nullable) = false];
}

message QueryAllPoolTokenRequest {
  uint64 pool_id = 1;
}

message QueryAllPoolTokenResponse {
  repeated PoolToken pool_tokens = 1 [(gogoproto.nullable) = false];
}